# wallhaven

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
wallhaven/: __init__.py  api.py  exceptions.py  main.py  models.py  options.py  params.py  routes.py  utils.py
wallhaven/utils/: colors.py  params.py
