[tool.poetry]
name = "wallhaven"
version = "0.5.2"
description = "A Python wrapper around the Wallhaven API."
authors = ["Lucas Cavalcante da Silva <silva.lucasdev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lucasc-silva/wallhaven"
repository = "https://github.com/lucasc-silva/wallhaven"
keywords = ["wallhaven", "wallpapers", "image"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
