[tool.poetry]
name = "wallhaven"
version = "0.5.3"
description = "A Python wrapper around the Wallhaven API."
authors = ["Lucas Cavalcante da Silva <silva.lucasdev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lucasc-silva/wallhaven"
repository = "https://github.com/lucasc-silva/wallhaven"
keywords = ["wallhaven", "wallpapers", "image"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
mypy = "^0.761"
pylint = "^2.4.4"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
