[tool.poetry]
name = "wallhaven"
version = "0.6.5"
description = "A Python wrapper around the Wallhaven API."
authors = ["Lucas Cavalcante da Silva <silva.lucasdev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lucasshiva/wallhaven"
repository = "https://github.com/lucasshiva/wallhaven"
keywords = ["wallhaven", "wallpapers", "images", "python3", "api"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


